css/style.css
html, body {
	height: 100%;
}

body {
	margin: 0;
	font-family: 'Nunito', sans-serif;
	color: white;
	transition: all 2s ease;
}

.center {
	display: flex;
	justify-content: center;
	align-items: center;
}

.link-underline {
    border-bottom: 0px solid #b4e7f8;
    box-shadow: inset 0 -3px 0 #b4e7f8;
    color: inherit;
    transition: background .15s cubic-bezier(.33,.66,.66,1);
    text-decoration: none !important;
}

.link-underline:hover {
    background: #b4e7f8;
}

@keyframes fadein {
    from {
        opacity: 0
    }

    to {
        opacity: 1
    }
}

/* Hero */
#hero {
	height: 100%;
	text-align: center;
	transition: all .5s ease;
}

.hero-img img {
	height: 100px;
	border-radius: 100%;
	border: 0.15em solid white;
	animation: fadein .5s both;
	animation-delay: .25s;
}

.hero-name {
	font-size: 2.5em;
	font-weight: 600;
	letter-spacing: 0.025em;
	padding: 0.1em;
	animation: fadein .5s both;
	animation-delay: .3s;
}

.hero-title {
	font-size: 1em;
	font-weight: 200;
	letter-spacing: 0.2em;
	animation: fadein .5s both;
	animation-delay: .4s;
}

#content {
	height: 100%;
}

/* Color */
#background {
	width: 100%;
	height: 100%;
	position: fixed;
	top: 0;
	z-index: -1;
	transition: all .5s linear;
}

.bg-hero {
	background-color: #A83279;
}

.bg-about {
	background-color: #764ba2;
}

.bg-cogifire {
	background-color: #3498db;
}

#cogifire .work-buttons>a:hover {
	color: #3498db;
}

.bg-hackuci {
	background-color: #34495e;
}

#hackuci .work-buttons>a:hover {
	color: #34495e;
}

.bg-coolection {
	background-color: #2C136C;
}

#coolection .work-buttons>a:hover {
	color: #2C136C;
}

.bg-clow {
	background-color: #d35400;
}

#clow .work-buttons>a:hover {
	color: #d35400;
}

.bg-joyfeed {
	background-color: #16a085;
}

#joyfeed .work-buttons>a:hover {
	color: #16a085;
}

.bg-contact {
	background-color: #1D8FE1;
}

/* About */
#about {
	height: 100%;
	margin-top: -5%;
}

#about .about {
	display: block;
	width: 80%;
	margin-left: auto;
	margin-right: auto;
	font-weight: 300;
	letter-spacing: 0.04em;
	line-height: 1.6em;
	font-size: 1.4em;
}

.header {
	font-size: 1.6em;
	font-weight: 700;
}

/* Work */
#work {
	height: 100%;
}

#work>div {
	height: 100%;
	overflow-x: hidden;
}

#cogifire {
	margin-top: -5%;
}

.work-container {
	width: 80%;
}

.logo-img {
	width: 45%;
	box-shadow: 0 30px 60px rgba(34,34,34,.5);
	float: right;
	margin-top: 5%;
}

.website-img {
	width: 90%;
	box-shadow: 0 30px 60px rgba(34,34,34,.5);
	position: absolute;
	top: -15%;
	right: -40%;
}

.work-details {
	width: 45%;
}

.work-name {
	font-size: 2.5em;
	font-weight: 700;
	letter-spacing: 0.02em;
}

.work-title {
	font-weight: 200;
	font-size: 0.9em;
	letter-spacing: 0.05em;
}

.work-description {
	font-weight: 300;
	padding: 2em 0 2.5em 0;
	letter-spacing: 0.04em;
	line-height: 1.5;
	font-size: 1.08em;
}

.work-buttons>a {
	text-decoration: none;
	color: white;
	border: 1px solid white;
	padding: 0.65em 1.2em;
	border-radius: 3px;
	transition: all .2s ease;
}

.work-buttons>a:hover {
	background-color: white;
}

.work-buttons>a+a {
	margin-left: 0.7em;
}

/* Contact */
#contact {
	height: 100%;
	margin-top: 200%;
	font-size: 1.4em;
}

#contact .contact {
	width: 80%;
}

.contact-card {
	margin: 2em 0;
	display: block;
	text-decoration: none;
}

.contact-card span {
	background-color: white;
	color: #1D8FE1;
	padding: 1.3% 1.8%;
	font-family: 'Roboto Mono', monospace;
	border-radius: 5px;
	font-size: 0.85em;
	transition: all .2s ease;
}

.contact-card i {
	font-size: 1em;
}

.contact-card span:hover {
	background-color: #ecf0f1;
}

/* Desktop */
@media (min-width: 992px) {
	#about>div, .work-container, #contact>div {
		opacity: 0;
		transform: translateY(15%);
		-moz-transform: translateY(15%);
		-webkit-transform: translateY(15%);
		transition: all .5s ease;
	}

	.active>div {
		transform: translateY(0) !important;
		-moz-transform: translateY(0) !important;
		-webkit-transform: translateY(0) !important;
		opacity: 1 !important;
	}

	#clow .website-img, #joyfeed .website-img {
		width: 60%;
		top: -10%;
		right: -15%;
	}
}

/* Mobile */
@media (max-width: 991px) {
	#about>div, .work-container {
		opacity: 0;
		transition: all .5s ease;
	}

	.active>div {
		opacity: 1 !important;
	}

	#about .about {
		font-size: 4.7vw;
		letter-spacing: 0.03em;
	}

	#cogifire, #hackuci, #coolection, #clow, #joyfeed {
		margin-top: 20%;
	}

	.work-details {
		width: 100%;
	}

	.work-name {
		font-size: 2.2em;
		margin-top: 0.5em;
	}

	.work-description {
		padding: 1em 0 1.5em 0;
		letter-spacing: 0.03em;
		line-height: 1.45;
		font-size: 2.6vh;
	}

	.logo-img {
		width: 100%;
		float: none;
		margin-top: 0;
	}

	.website-img {
		position: initial;
		top: initial;
		right: initial;
	}

	#clow .website-img, #joyfeed .website-img {
		width: 65%;
		margin-left: 15%;
	}

	.contact-card {
		margin-left: 0;
		margin-right: 0;
	}

	.contact-card span {
		font-size: 0.95em;
		padding: 1.5% 3.5%;
	}

	#contact {
		margin-top: 700%;
		height: 120%;
	}
}

